03-support/nginx-ingress-cert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gnx-apps
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-microk8s
  labels:
    app: gnx-demo-app  
spec:
  rules:
    - host: genocs.com  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway-svc
                port:
                  number: 80
  tls:
    - hosts:
        - genocs.com
      secretName: tls-example
